# Mini-Dungeon

./: .clang-format  .gitmodules  CMakeLists.txt  DungeonManager.py  Dungeons.py  Entities.py  Graphics.py  GraphicsManager.py  Main.py  Physics.py  README.md  UI.py  audio.py  core.py  dungeons.py  entities.py  graphics.py  main.py  makefile  physics.py  states.py
Rooms/: Basic.room  Room_0.room  Room_1.room  Room_11.room  Room_4.room  Room_7.room  Room_8.room  Room_9.room  Simple_0.room  Simple_1.room  Test.room  UFSC.room
Sprites/: Door - Botton.kra  Door.png-autosave.kra
assets/rooms/: Room_0.room  Room_1.room  Room_10.room  Room_11.room  Room_2.room  Room_3.room  Room_4.room  Room_6.room  Room_7.room  Room_8.room  room_0.room  room_1.room  room_10.room  room_11.room  room_2.room  room_3.room  room_4.room  room_5.room  room_6.room  room_7.room  room_8.room  room_9.room
include/: definitions.hpp  game_core.hpp  types.hpp
include/components/: behavior_component.hpp  button_component.hpp  collider_component.hpp  component.hpp  graphics2D_component.hpp  graphics_component.hpp  physics_component.hpp  text_component.hpp  transform2D_component.hpp  transform_component.hpp  ui_transform_component.hpp
include/containers/: asset_container.hpp  container.hpp  entity_container.hpp  map_container.hpp  vector_container.hpp
include/entities/: dynamic_physical_entity2D.hpp  entity.hpp  entity2D.hpp  physical_entity2D.hpp  static_physical_entity2D.hpp
include/gameplay/: dungeon.hpp
include/managers/: audio_component_manager.hpp  audio_manager.hpp  behavior_component_manager.hpp  behavior_manager.hpp  component_manager.hpp  game_manager.hpp  graphical_debugging_manager.hpp  graphics_component_manager.hpp  graphics_manager.hpp  manager.hpp  physics_component_manager.hpp  physics_manager.hpp
include/scenes/: gameplay_scene.hpp  init_scene.hpp  main_menu_scene.hpp  menu_scene.hpp  scene.hpp
include/utils/: activity_state.hpp  debug.hpp  event.hpp  game_core_dependency_injector.hpp  id.hpp  restricted_instance.hpp  transform.hpp  transform_data.hpp  transform_system.hpp  transform_system2D.hpp  uncopiable.hpp  vector.hpp
old/: UI.py  main.py  physics.py
rooms/: Room_10.room  Room_2.room  Room_3.room  Room_5.room  Room_6.room
src/: game_core.cpp  main.cpp
src/components/: behavior_component.cpp  button_component.cpp  collider_component.cpp  component.cpp  graphics2D_component.cpp  graphics_component.cpp  physics_component.cpp  text_component.cpp  transform2D_components.cpp  transform_component.cpp  transform_components.cpp  (+1 more)
src/utils/: id.cpp  (+4 more)
(+67 files in other folders)
